fixer les erreurs d'inscription de swagger
